--- a/config/database.yml
+++ b/config/database.yml
@@ -47,8 +47,10 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
-production:
-  <<: *default
+ production:
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
   database: message-board_production
   username: message-board
   password: <%= ENV['MESSAGE-BOARD_DATABASE_PASSWORD'] %>
